--- a/Calculator.html
+++ b/Calculator.html
@@ -1,9 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
+	<link rel="stylesheet" type="text/css" href="Calculator.css">
+	<title>Simple Calculator</title>
 </head>
 <body>
+	<center>
+	<div id="erase">
+	<button>Delete</button>
+	<button>Clear</button>
+</div>
+	<div id="operation">
+	<button>+</button>
+	<button>-</button>
+	<button>*</button>
+	<button>÷</button>
+	<button>=</button>
+</div>
 
+	<div id="numbers1">
+	<button>1</button>
+	<button>2</button>
+	<button>3</button>
+</div>
+	<div id="numbers2">
+	<button>4</button>
+	<button>5</button>
+	<button>6</button>
+ </div>
+ 	<div id="numbers3">
+	<button>7</button>
+	<button>8</button>
+	<button>9</button>
+</div>
+	<button>0</button>
+</div>
+	</center>
+<script type="text/javascript" src="Calculator.js"></script>
 </body>
 </html>
