--- a/Calculator.html
+++ b/Calculator.html
@@ -39,6 +39,11 @@
 </div>
 	<button>0</button>
 </div>
+<div>
+	<output id="output">
+		
+	</output>
+</div>
 	</center>
 <script type="text/javascript" src="Calculator.js"></script>
 </body>
