--- a/Calculator.html
+++ b/Calculator.html
@@ -10,13 +10,14 @@
 </head>
 <body id="grad">
 	<center>
-	<div id="out">
-	<output id="output"></output>
-	</div>
+	<img src="https://media0.giphy.com/media/9lMoyThpKynde/source.gif">
 <div id="erase">
 	<button class="grid-container" id="delete">Delete</button>
 	<button class="grid-container" id="clear">Clear</button>
 </div>
+<div id="out">
+	<output id="output"></output>
+	</div>
 <div id="operation">
 	<button class="grid-container"  id="plus">+</button>
 	<button class="grid-container"  id="minus">-</button>
