--- a/Calculator.html
+++ b/Calculator.html
@@ -11,38 +11,36 @@
 <body id="grad">
 	<center>
 	<img src="https://media0.giphy.com/media/9lMoyThpKynde/source.gif">
-<div id="erase">
-	<button class="grid-container" id="delete">Delete</button>
-	<button class="grid-container" id="clear">Clear</button>
-</div>
-<div id="out">
-	<output id="output"></output>
-	</div>
-<div id="operation">
-	<button class="grid-container"  id="plus">+</button>
-	<button class="grid-container"  id="minus">-</button>
-	<button class="grid-container"  id="mult">*</button>
-	<button class="grid-container"  id="divide">÷</button>
-	<button class="grid-container"  id="equal">=</button>
-</div>
-
+<div id="calculator">
+	<div id="result"></div>
 <div id="numbers1">
-	<button class="grid-container" id="7">7</button>
-	<button class="grid-container" id="8">8</button>
-	<button class="grid-container" id="9">9</button>
+	<button class="grid-container  num" id="7">7</button>
+	<button class="grid-container  num" id="8">8</button>
+	<button class="grid-container  num" id="9">9</button>
+	<button class="grid-container" id="clear">C</button>
 </div>
 <div id="numbers2">
-	<button class="grid-container" id="4">4</button>
-	<button class="grid-container" id="5">5</button>
-	<button class="grid-container" id="6">6</button>
+	<button class="grid-container  num" id="4">4</button>
+	<button class="grid-container  num" id="5">5</button>
+	<button class="grid-container  num" id="6">6</button>
+	<button class="operators op"  id="plus">+</button>
  </div>
  <div id="numbers3">
-	<button class="grid-container" id="1">1</button>
-	<button class="grid-container" id="2">2</button>
-	<button class="grid-container" id="3">3</button>
+	<button class="grid-container  num" id="1">1</button>
+	<button class="grid-container  num" id="2">2</button>
+	<button class="grid-container  num" id="3">3</button>
+	<button class="operators op"  id="minus">-</button>
 </div>
 <div id="zero">
-	<button class="grid-container" id="0">0</button>
+	<button class="grid-container  num" id="0">0</button>
+	<button class="grid-container  op"  id="dec">.</button>
+	<button class="grid-container  op"  id="per">%</button>
+	<button class="operators p"  id="divide">÷</button>
+</div>
+<div id="eq">
+		<button class="op"  id="equal">=</button>
+		<button class="operators op"  id="mult">*</button>
+</div>
 </div> 
 <div> <img id="img" src="https://funwithalgebracom.files.wordpress.com/2019/05/cropped-watermark1.png"></div>
 	</center>
