--- a/Calculator.html
+++ b/Calculator.html
@@ -16,32 +16,32 @@
 	<div id="result"></div>
 	
 <div id="numbers1">
-	<button class="grid-container  num" id="7">7</button>
-	<button class="grid-container  num" id="8">8</button>
-	<button class="grid-container  num" id="9">9</button>
+	<button class="grid-container  num" value="7" id="7">7</button>
+	<button class="grid-container  num" value="8" id="8">8</button>
+	<button class="grid-container  num" value="9" id="9">9</button>
 	<button class="grid-container" id="clear">C</button>
 </div>
 <div id="numbers2">
-	<button class="grid-container  num" id="4">4</button>
-	<button class="grid-container  num" id="5">5</button>
-	<button class="grid-container  num" id="6">6</button>
+	<button class="grid-container  num" value="4" id="4">4</button>
+	<button class="grid-container  num" value="5" id="5">5</button>
+	<button class="grid-container  num" value="6" id="6">6</button>
 	<button class="operators op"  id="plus">+</button>
  </div>
  <div id="numbers3">
-	<button class="grid-container  num" id="1">1</button>
-	<button class="grid-container  num" id="2">2</button>
-	<button class="grid-container  num" id="3">3</button>
-	<button class="operators op"  id="minus">-</button>
+	<button class="grid-container  num" value="1" id="1">1</button>
+	<button class="grid-container  num" value="2" id="2">2</button>
+	<button class="grid-container  num" value="3" id="3">3</button>
+	<button class="operators op"  value="-" id="minus">-</button>
 </div>
 <div id="zero">
-	<button class="grid-container  num" id="0">0</button>
-	<button class="grid-container  op"  id="dec">.</button>
-	<button class="grid-container  op"  id="per">%</button>
-	<button class="operators p"  id="divide">÷</button>
+	<button class="grid-container  num" value="0" id="0">0</button>
+	<button class="grid-container  op"  value="." id="dec">.</button>
+	<button class="grid-container  op"  value="%" id="per">%</button>
+	<button class="operators op"  value="/" id="divide">÷</button>
 </div>
 <div id="eq">
 		<button class="op"  id="equal">=</button>
-		<button class="operators op"  id="mult">*</button>
+		<button class="operators op"  value="*" id="mult">*</button>
 </div>
 </div> 
 <div> <img id="img" src="https://funwithalgebracom.files.wordpress.com/2019/05/cropped-watermark1.png"></div>
