--- a/Calculator.html
+++ b/Calculator.html
@@ -25,23 +25,23 @@
 	<button class="grid-container  num" value="4" id="4">4</button>
 	<button class="grid-container  num" value="5" id="5">5</button>
 	<button class="grid-container  num" value="6" id="6">6</button>
-	<button class="operators op"  id="plus">+</button>
+	<button class="operators"  value="+" id="plus">+</button>
  </div>
  <div id="numbers3">
 	<button class="grid-container  num" value="1" id="1">1</button>
 	<button class="grid-container  num" value="2" id="2">2</button>
 	<button class="grid-container  num" value="3" id="3">3</button>
-	<button class="operators op"  value="-" id="minus">-</button>
+	<button class="operators"  value="-" id="minus">-</button>
 </div>
 <div id="zero">
 	<button class="grid-container  num" value="0" id="0">0</button>
-	<button class="grid-container  op"  value="." id="dec">.</button>
-	<button class="grid-container  op"  value="%" id="per">%</button>
-	<button class="operators op"  value="/" id="divide">÷</button>
+	<button class="grid-container" value=".">.</button>
+	<button class="grid-container"  value="%" id="per">%</button>
+	<button class="operators"  value="/" id="divide">÷</button>
 </div>
 <div id="eq">
-		<button class="op"  id="equal">=</button>
-		<button class="operators op"  value="*" id="mult">*</button>
+		<button id="equal">=</button>
+		<button class="operators"  value="*" id="mult">*</button>
 </div>
 </div> 
 <div> <img id="img" src="https://funwithalgebracom.files.wordpress.com/2019/05/cropped-watermark1.png"></div>
