--- a/Calculator.html
+++ b/Calculator.html
@@ -1,51 +1,52 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<script
-  src="https://code.jquery.com/jquery-3.4.1.js"
-  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-  crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.js"
+		integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="Calculator.css">
 	<title>Simple Calculator</title>
 </head>
+
 <body id="grad">
 	<center>
-	<img src="https://media0.giphy.com/media/9lMoyThpKynde/source.gif">
-<div id="calculator">
+		<img src="https://media0.giphy.com/media/9lMoyThpKynde/source.gif">
+		<div id="calculator">
 
-	<div id="result"></div>
-	
-<div id="numbers1">
-	<button class="grid-container  num" value="7" id="7">7</button>
-	<button class="grid-container  num" value="8" id="8">8</button>
-	<button class="grid-container  num" value="9" id="9">9</button>
-	<button class="grid-container" id="clear">C</button>
-</div>
-<div id="numbers2">
-	<button class="grid-container  num" value="4" id="4">4</button>
-	<button class="grid-container  num" value="5" id="5">5</button>
-	<button class="grid-container  num" value="6" id="6">6</button>
-	<button class="operators"  value="+" id="plus">+</button>
- </div>
- <div id="numbers3">
-	<button class="grid-container  num" value="1" id="1">1</button>
-	<button class="grid-container  num" value="2" id="2">2</button>
-	<button class="grid-container  num" value="3" id="3">3</button>
-	<button class="operators"  value="-" id="minus">-</button>
-</div>
-<div id="zero">
-	<button class="grid-container  num" value="0" id="0">0</button>
-	<button class="grid-container" value=".">.</button>
-	<button class="grid-container"  value="%" id="per">%</button>
-	<button class="operators"  value="/" id="divide">÷</button>
-</div>
-<div id="eq">
-		<button id="equal">=</button>
-		<button class="operators"  value="*" id="mult">*</button>
-</div>
-</div> 
-<div> <img id="img" src="https://funwithalgebracom.files.wordpress.com/2019/05/cropped-watermark1.png"></div>
+			<div id="result"></div>
+
+			<div id="numbers1">
+				<button class="grid-container  num" value="7" id="7">7</button>
+				<button class="grid-container  num" value="8" id="8">8</button>
+				<button class="grid-container  num" value="9" id="9">9</button>
+				<button class="grid-container" id="clear">C</button>
+			</div>
+			<div id="numbers2">
+				<button class="grid-container  num" value="4" id="4">4</button>
+				<button class="grid-container  num" value="5" id="5">5</button>
+				<button class="grid-container  num" value="6" id="6">6</button>
+				<button class="operators" value="+" id="plus">+</button>
+			</div>
+			<div id="numbers3">
+				<button class="grid-container  num" value="1" id="1">1</button>
+				<button class="grid-container  num" value="2" id="2">2</button>
+				<button class="grid-container  num" value="3" id="3">3</button>
+				<button class="operators" value="-" id="minus">-</button>
+			</div>
+			<div id="zero">
+				<button class="grid-container  num" value="0" id="0">0</button>
+				<button class="grid-container" value=".">.</button>
+				<button class="grid-container" value="%" id="per">%</button>
+				<button class="operators" value="/" id="divide">÷</button>
+			</div>
+			<div id="eq">
+				<button id="equal">=</button>
+				<button class="operators" value="*" id="mult">*</button>
+			</div>
+		</div>
+		<div> <img id="img" src="https://funwithalgebracom.files.wordpress.com/2019/05/cropped-watermark1.png"></div>
 	</center>
-<script type="text/javascript" src="Calculator.js"></script>
+	<script type="text/javascript" src="Calculator.js"></script>
 </body>
+
 </html>
