--- a/Calculator.html
+++ b/Calculator.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<script
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
@@ -8,14 +9,21 @@
 	<link rel="stylesheet" type="text/css" href="Calculator.css">
 	<title>Simple Calculator</title>
 </head>
-<body id="grad">
+<body id="body">
 	<center>
-	<img src="https://media0.giphy.com/media/9lMoyThpKynde/source.gif">
+	<h1>Simple Calculator</h1>
 <div id="calculator">
 
 	<div id="result"></div>
-	
+	<div id="par">
+
+<button class="grid-container operators"  value="/100" id="per">%</button>
+	<button class="operators" value="**" >P</button>
+	<button class="operators" value="(" >(</button>
+	<button class="operators" value=")">)</button>
+	</div>
 <div id="numbers1">
+
 	<button class="grid-container  num" value="7" id="7">7</button>
 	<button class="grid-container  num" value="8" id="8">8</button>
 	<button class="grid-container  num" value="9" id="9">9</button>
@@ -34,16 +42,19 @@
 	<button class="operators"  value="-" id="minus">-</button>
 </div>
 <div id="zero">
+	
+	<button class="grid-container  operators" value=".">.</button>
 	<button class="grid-container  num" value="0" id="0">0</button>
-	<button class="grid-container" value=".">.</button>
-	<button class="grid-container"  value="%" id="per">%</button>
-	<button class="operators"  value="/" id="divide">÷</button>
+	<button class="grid-container  num" value="1/" id="divideBy">X^-1</button>
+	<button class="operators"  value="*" id="mult">*</button>
 </div>
 <div id="eq">
 		<button id="equal">=</button>
-		<button class="operators"  value="*" id="mult">*</button>
+		<button class="operators"  value="/" id="divide">÷</button>
+		
 </div>
 </div> 
+
 <div> <img id="img" src="https://funwithalgebracom.files.wordpress.com/2019/05/cropped-watermark1.png"></div>
 	</center>
 <script type="text/javascript" src="Calculator.js"></script>
