--- a/Calculator.html
+++ b/Calculator.html
@@ -1,52 +1,62 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	<script src="https://code.jquery.com/jquery-3.4.1.js"
-		integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+	<meta charset="utf-8">
+	<script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="Calculator.css">
 	<title>Simple Calculator</title>
 </head>
-
-<body id="grad">
+<body id="body">
 	<center>
-		<img src="https://media0.giphy.com/media/9lMoyThpKynde/source.gif">
-		<div id="calculator">
+	<h1>Simple Calculator</h1>
+<div id="calculator">
 
-			<div id="result"></div>
+	<div id="result"></div>
+	<div id="par">
 
-			<div id="numbers1">
-				<button class="grid-container  num" value="7" id="7">7</button>
-				<button class="grid-container  num" value="8" id="8">8</button>
-				<button class="grid-container  num" value="9" id="9">9</button>
-				<button class="grid-container" id="clear">C</button>
-			</div>
-			<div id="numbers2">
-				<button class="grid-container  num" value="4" id="4">4</button>
-				<button class="grid-container  num" value="5" id="5">5</button>
-				<button class="grid-container  num" value="6" id="6">6</button>
-				<button class="operators" value="+" id="plus">+</button>
-			</div>
-			<div id="numbers3">
-				<button class="grid-container  num" value="1" id="1">1</button>
-				<button class="grid-container  num" value="2" id="2">2</button>
-				<button class="grid-container  num" value="3" id="3">3</button>
-				<button class="operators" value="-" id="minus">-</button>
-			</div>
-			<div id="zero">
-				<button class="grid-container  num" value="0" id="0">0</button>
-				<button class="grid-container" value=".">.</button>
-				<button class="grid-container" value="%" id="per">%</button>
-				<button class="operators" value="/" id="divide">÷</button>
-			</div>
-			<div id="eq">
-				<button id="equal">=</button>
-				<button class="operators" value="*" id="mult">*</button>
-			</div>
-		</div>
-		<div> <img id="img" src="https://funwithalgebracom.files.wordpress.com/2019/05/cropped-watermark1.png"></div>
+<button class="grid-container operators"  value="/100" id="per">%</button>
+	<button class="operators" value="**" >P</button>
+	<button class="numbers parentheses" value="(" >(</button>
+	<button class="numbers parentheses" value=")">)</button>
+	</div>
+<div id="numbers1">
+
+	<button class="grid-container  numbers" value="7" id="7">7</button>
+	<button class="grid-container  numbers" value="8" id="8">8</button>
+	<button class="grid-container  numbers" value="9" id="9">9</button>
+	<button class="grid-container" id="clear">C</button>
+</div>
+<div id="numbers2">
+	<button class="grid-container  numbers" value="4" id="4">4</button>
+	<button class="grid-container  numbers" value="5" id="5">5</button>
+	<button class="grid-container  numbers" value="6" id="6">6</button>
+	<button class="operators"  value="+" id="plus">+</button>
+ </div>
+ <div id="numbers3">
+	<button class="grid-container  numbers" value="1" id="1">1</button>
+	<button class="grid-container  numbers" value="2" id="2">2</button>
+	<button class="grid-container  numbers" value="3" id="3">3</button>
+	<button class="operators"  value="-" id="minus">-</button>
+</div>
+<div id="zero">
+	
+	<button class="grid-container  operators" value=".">.</button>
+	<button class="grid-container  numbers" value="0" id="0">0</button>
+	<button class="operators numbers" value="1/" id="divideBy">1/X</button>
+	<button class="operators"  value="*" id="mult">*</button>
+</div>
+<div id="eq">
+		<button id="equal">=</button>
+		<button class="operators"  value="/" id="divide">÷</button>
+		
+</div>
+</div> 
+
+<div> <img id="img" src="https://funwithalgebracom.files.wordpress.com/2019/05/cropped-watermark1.png"></div>
 	</center>
-	<script type="text/javascript" src="Calculator.js"></script>
+<script type="text/javascript" src="Calculator.js"></script>
 </body>
-
 </html>
