--- a/Calculator.html
+++ b/Calculator.html
@@ -36,7 +36,7 @@
 	<button class="operators"  value="+" id="plus" accesskey="+">+</button>
  </div>
  <div id="numbers3">
-	<button class="grid-container  numbers" value="1" id="1" accesskey="a">1</button>
+	<button class="grid-container  numbers" value="1" id="a" accesskey="a">1</button>
 	<button class="grid-container  numbers" value="2" id="2" accesskey="2">2</button>
 	<button class="grid-container  numbers" value="3" id="3" accesskey="3">3</button>
 	<button class="operators"  value="-" id="minus" accesskey="-">-</button>
