--- a/Calculator.html
+++ b/Calculator.html
@@ -18,7 +18,7 @@
 	<div id="par">
 
 <button class="grid-container operators"  value="/100" id="per" accesskey="%">%</button>
-	<button class="operators" value="**" >P</button>
+	<button class="operators" value="**" accesskey="p">P</button>
 	<button class="numbers parentheses" value="(" accesskey="(">(</button>
 	<button class="numbers parentheses" value=")" accesskey=")">)</button>
 	</div>
@@ -36,7 +36,7 @@
 	<button class="operators"  value="+" id="plus" accesskey="+">+</button>
  </div>
  <div id="numbers3">
-	<button class="grid-container  numbers" value="1" id="a" accesskey="a">1</button>
+	<button class="grid-container  numbers" value="1" id="a" accesskey="1">1</button>
 	<button class="grid-container  numbers" value="2" id="2" accesskey="2">2</button>
 	<button class="grid-container  numbers" value="3" id="3" accesskey="3">3</button>
 	<button class="operators"  value="-" id="minus" accesskey="-">-</button>
@@ -45,7 +45,7 @@
 	
 	<button class="grid-container  operators" value="." accesskey=".">.</button>
 	<button class="grid-container  numbers" value="0" id="0" accesskey="0">0</button>
-	<button class="operators numbers" value="1/" id="divideBy" accesskey="1">1/X</button>
+	<button class="operators numbers" value="1/" id="divideBy" accesskey="x">1/X</button>
 	<button class="operators"  value="*" id="mult" accesskey="*">*</button>
 </div>
 <div id="eq">
