--- a/Calculator.html
+++ b/Calculator.html
@@ -12,6 +12,7 @@
 <body id="body">
 	<center>
 	<h1>Simple Calculator</h1>
+	<hr>
 <div id="calculator">
 
 	<div id="result"></div>
@@ -57,5 +58,7 @@
 <div> <img id="img" src="https://funwithalgebracom.files.wordpress.com/2019/05/cropped-watermark1.png"></div>
 	</center>
 <script type="text/javascript" src="Calculator.js"></script>
+<hr>
+<footer>All rights are reserved to Abdlrrahman Shibani and Sofian Saleh.</footer>
 </body>
 </html>
