--- a/Calculator.html
+++ b/Calculator.html
@@ -59,6 +59,6 @@
 	</center>
 <script type="text/javascript" src="Calculator.js"></script>
 <hr>
-<footer>All rights are reserved to Abdlrrahman Shibani and Sofian Saleh.</footer>
+<footer>All rights are reserved, &copy Abdlrrahman Shibani and Sofian Saleh.</footer>
 </body>
 </html>
