--- a/Calculator.html
+++ b/Calculator.html
@@ -46,7 +46,7 @@
 	
 	<button class="grid-container  operators" value="." accesskey=".">.</button>
 	<button class="grid-container  numbers" value="0" id="0" accesskey="0">0</button>
-	<button class="operators numbers" value="1/" id="divideBy" accesskey="x">1/X</button>
+	<button class="operators"  value="1/">1/X</button>
 	<button class="operators"  value="*" id="mult" accesskey="*">*</button>
 </div>
 <div id="eq">
